2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Moved Makefile fragments to ../../am/.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (scriptsdir): Change texmf => texmf-dist.

2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_COND_WIN32_WRAP for win32 wrappers.

2012-12-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-12-24  Karl Berry  <karl@tug.org>

	* Makefile.am,
	* configure.ac: new files.
	* README: rename from README.texdoctk.
	* texdoctk.pl: change version date, looking for a maintainer.
